Add Trainer, GDTrainer classes and tests
The Trainer class implements specific learning algorithms for a Model Graph. The child GDTrainer performs gradient descent. The class is equipped with a tensorflow Saver and Writer that handle storage of the trained model and logfiles with the evolution of relevant scalars during training.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
 install:
   - pip install --upgrade tensorflow tensorflow-probability bidict
 script:
-  - python -m unittest discover './neurolib/tests/builders/'
+  - python -m unittest discover './neurolib/tests/'
 
